Bug 1006498 - Import nsCharsetConverterManager into c-c. r=Neil, patch originally due to Henri Sivonen. CLOSED TREE.